<resources>
    <string name="app_name">Effective Mobile Test Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="search">Search</string>
    <string name="splash_screen_icon_text">Ecommerce Concept</string>
    <string name="product_details">Product Details</string>
    <string name="radiobutton_product_detail_shop">Shop</string>
    <string name="radiobutton_product_detail_details">Details</string>
    <string name="radiobutton_product_detail_features">Features</string>
    <string name="product_details_select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_address">Add address</string>
    <string name="my_cart_label">My Cart</string>
    <string name="checkout_button_label">Checkout</string>
    <string name="explorer_bottom_menu_label">Explorer</string>
    <string name="cart_bottom_menu_label">Cart</string>
    <string name="favourite_bottom_menu_label">Favourite</string>
    <string name="profile_bottom_menu_label">Profile</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="is_it_favorite_product">Is it favorite product?</string>
    <string name="image_of_best_deal_product">Image of best deal product</string>
</resources>