<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_circle"
        android:title="@string/explorer_bottom_menu_label"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart_bottom_menu_label"/>
    <item
        android:id="@+id/page_3"
        android:enabled="false"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite_bottom_menu_label"/>
    <item
        android:id="@+id/page_4"
        android:enabled="false"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_bottom_menu_label"/>
</menu>